--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,10 @@
           React.createElement("h1", {}, "Adopt me!")
         );
       };
+
+      const container = document.getElementById("root");
+      const root = ReactDOM.createRoot(container);
+      root.render(React.createElement(App));
     </script>
   </body>
 </html>
