--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Adopt Me</title>
   </head>
-
   <body>
+    <div id="modal"></div>
     <div id="root">not rendered</div>
     <script type="module" src="./App.jsx"></script>
   </body>
