--- a/src/index.html
+++ b/src/index.html
@@ -7,23 +7,9 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Adopt Me</title>
   </head>
-
   <body>
+    <div id="modal"></div>
     <div id="root">not rendered</div>
-    <script src="https://unpkg.com/react@18.2.0/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
-    <script>
-      const App = () => {
-        return React.createElement(
-          "div",
-          {},
-          React.createElement("h1", {}, "Adopt me!")
-        );
-      };
-
-      const container = document.getElementById("root");
-      const root = ReactDOM.createRoot(container);
-      root.render(React.createElement(App));
-    </script>
+    <script type="module" src="./App.jsx"></script>
   </body>
 </html>
